fixed pin-input behavior on mobile; fixed room api get by id; added owner rooms listing on rooms-list component

--- a/frontend/src/app/shared/components/room-list/room-list.component.scss
+++ b/frontend/src/app/shared/components/room-list/room-list.component.scss
@@ -45,6 +45,24 @@
                 .pin_code {
                     color: black;
                 }
+
+                .rooms-room-head-name {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 5px;
+
+                    .rooms-room-head-name-owner-mark {
+                        color: #2e6847;
+
+                        &:before {
+                            content: '(';
+                        }
+                        &:after {
+                            content: ')';
+                        }
+                    }
+                }
             }
 
             .rooms-room-body {
